# docs/swagger.yaml
@@ -110,6 +110,49 @@ definitions:
         example: johndoe
         type: string
     type: object
+  github_com_evrone_go-clean-template_internal_entity.ContentArticle:
+    properties:
+      author_id:
+        type: string
+      body:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: string
+      image_url:
+        type: string
+      priority:
+        type: integer
+      published_at:
+        type: string
+      scheduled_at:
+        type: string
+      slug:
+        type: string
+      status:
+        $ref: '#/definitions/github_com_evrone_go-clean-template_internal_entity.ContentStatus'
+      tags:
+        items:
+          type: string
+        type: array
+      title:
+        type: string
+      topic:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  github_com_evrone_go-clean-template_internal_entity.ContentStatus:
+    enum:
+    - draft
+    - scheduled
+    - published
+    type: string
+    x-enum-varnames:
+    - ContentStatusDraft
+    - ContentStatusScheduled
+    - ContentStatusPublished
   github_com_evrone_go-clean-template_internal_entity.Page:
     properties:
       limit:
@@ -142,6 +185,10 @@ definitions:
         items:
           type: string
         type: array
+      intro_article:
+        $ref: '#/definitions/github_com_evrone_go-clean-template_internal_entity.ContentArticle'
+      intro_article_id:
+        type: string
       is_active:
         type: boolean
       is_hot:
